innobase/include/os0file.h
@@ -65,6 +65,8 @@ log. */
 #define OS_FILE_OVERWRITE		53
 #define OS_FILE_OPEN_RAW		54
 #define	OS_FILE_CREATE_PATH		55
+#define	OS_FILE_OPEN_RETRY		56	/* for os_file_create() on
+						the first ibdata file */
 
 #define OS_FILE_READ_ONLY 		333
 #define	OS_FILE_READ_WRITE		444
